--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -59,4 +59,11 @@ commands =
     poetry run sphinx-apidoc -o docs/ {{ cookiecutter.project_package_name }}
     make -C docs clean
     make -C docs html
+
+[testenv:docs-pdf]
+description = gen docs in pdf
+whitelist_externals =
+    {[testenv:docs]whitelist_externals}
+commands =
+    {[testenv:docs]commands}
     make -C docs latexpdf
