--- a/{{cookiecutter.project_slug}}/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/pyproject.toml
@@ -38,11 +38,13 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.6"
 # Optional dependencies to be part of `test` extra
+{%- if cookiecutter.use_pytest == 'y' %}
 pytest = {version = "^5.1", optional = true}
 pytest-cov = {version = "^2.8.1", optional = true}
 pytest-mock = {version = "^1.13.0", optional = true}
 pytest-html = {version = "^2.0.1", optional = true}
 pytest-asyncio = {version = "^0.10.0", optional = true}
+{%- endif %}
 # Optional dependencies to be part of `bdd` extra
 behave = {version = "^1.2", optional = true}
 PyHamcrest = {version = "^1.9", optional = true}
@@ -103,7 +105,11 @@ include_trailing_comma = true
 use_parentheses = true
 force_grid_wrap = 0
 line_length = 88
-known_third_party = ["behave"]
+{%- if cookiecutter.command_line_interface|lower == 'cleo' or cookiecutter.command_line_interface|lower == 'click' %}
+known_third_party = ["behave", "{{ cookiecutter.command_line_interface|lower }}", "hamcrest"{% if cookiecutter.use_pytest == 'y' %}, "pytest"{%- endif %}, "six", "toml"]
+{% else %}
+known_third_party = ["behave", "hamcrest"{% if cookiecutter.use_pytest == 'y' %}, "pytest"{%- endif %}, "six", "toml"]
+{%- endif %}
 
 [tool.black]
 line-length = 88
