--- a/.github/workflows/end_to_end_tests.yaml
+++ b/.github/workflows/end_to_end_tests.yaml
@@ -6,7 +6,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Build environmemnt
-      run: docker build -t cookie-test tests -f ./tests/Dockerfile
-    - name: Run test
-      run: docker run --rm -v $(pwd):/template cookie-test /template/tests/instanciate_project_and_validate_it.sh /template
+    - uses: ./.github/actions/provision-project-from-cookiecutter
