ci: try fix test_install_poetry job

--- a/.github/workflows/test_and_make_release.yml
+++ b/.github/workflows/test_and_make_release.yml
@@ -33,7 +33,7 @@ jobs:
           cd python_boilerplate
 
           ./scripts/install_poetry.sh
-          source $HOME/.bashrc
+          source $HOME/.poetry/env
 
           poetry --version
 
