--- a/{{cookiecutter.project_slug}}/.gitignore
+++ b/{{cookiecutter.project_slug}}/.gitignore
@@ -57,6 +57,12 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 
+# Behave / coverage reports
+cucumber-report.json
+
+# behave4cli
+__WORKDIR__/
+
 # Translations
 *.mo
 *.pot
