--- a/{{cookiecutter.project_slug}}/tox.ini
+++ b/{{cookiecutter.project_slug}}/tox.ini
@@ -11,14 +11,16 @@ skip_missing_interpreters = True
 minversion = 3.6
 isolated_build = true
 skipsdist = true
-ignore_basepython_conflict=true
+ignore_basepython_conflict = false
 
 [testenv]
-whitelist_externals = poetry
+whitelist_externals =
+    poetry
+    make
 passenv = HTTP_PROXY HTTPS_PROXY NO_PROXY
 commands =
-    poetry install --no-dev --no-root -E test
-    poetry run pytest --cov={{ cookiecutter.project_package_name }} --cov-report=html --cov-report=term {posargs:tests}
+    make install-test-dependencies
+    make test
 
 [testenv:bdd]
 whitelist_externals =
@@ -26,8 +28,8 @@ whitelist_externals =
     bash
 passenv = {[testenv]passenv}
 commands =
-    poetry install --no-dev -E bdd
-    poetry run behave {posargs:features} --format=behave_ext.cucumber_json:PrettyCucumberJSONFormatter -o cucumber-report.json --format=pretty
+    make install-bdd-dependencies
+    make bdd
 
 [testenv:bdd-py38]
 whitelist_externals = {[testenv:bdd]whitelist_externals}
@@ -47,37 +49,29 @@ commands = {[testenv:bdd]commands}
 [testenv:format]
 description = format check
 commands =
-    poetry install --no-dev --no-root -E format
-    poetry run isort -c -rc {posargs:{{ cookiecutter.project_package_name }} tests features}
-    poetry run black --check {posargs:{{ cookiecutter.project_package_name }} tests features}
+    make install-format-dependencies
+    make format-check
 
 [testenv:lint]
 commands =
-    poetry install --no-dev --no-root -E lint
-    poetry run flake8 {posargs:{{ cookiecutter.project_package_name }} tests features}
+    make install-lint-dependencies
+    make lint
 
 [testenv:type]
 description = type check
 commands =
-    poetry install --no-dev --no-root -E type
-    poetry run mypy {posargs:-p {{ cookiecutter.project_package_name }} -p tests}
+    make install-type-dependencies
+    make type
 
 
 [testenv:docs]
 description = gen docs
-whitelist_externals =
-    {[testenv]whitelist_externals}
-    make
 commands =
-    poetry install --no-dev --no-root -E docs
-    poetry run sphinx-apidoc -o docs/ {{ cookiecutter.project_package_name }}
-    make -C docs clean
-    make -C docs html
+    make install-docs-dependencies
+    make docs
 
 [testenv:docs-pdf]
 description = gen docs in pdf
-whitelist_externals =
-    {[testenv:docs]whitelist_externals}
 commands =
     {[testenv:docs]commands}
-    make -C docs latexpdf
+    make docs-pdf
